--- a/Advanced-CSS/index.css
+++ b/Advanced-CSS/index.css
@@ -146,7 +146,8 @@ ul li{
 .buttons a:hover{
     color: greenyellow;
 }
-.directions ul{
+
+#navigation ul{
     text-decoration: none;
     margin: 0;
     padding: 0;
@@ -154,14 +155,14 @@ ul li{
     background-color: #f1f1f1;
 }
 
-.directions li a{
+#navigation li a{
     display: block;
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
 }
 
-.directions li a:hover{
-    background-color: #555;
+#navigation li a:hover{
+    background-color: #44b1ff;
     color: white;
 }
