--- a/Advanced-CSS/styles.css
+++ b/Advanced-CSS/styles.css
@@ -146,7 +146,7 @@ ul li{
 .buttons a:hover{
     color: greenyellow;
 }
-.directions ul{
+#navigation ul{
     text-decoration: none;
     margin: 0;
     padding: 0;
@@ -154,14 +154,35 @@ ul li{
     background-color: #f1f1f1;
 }
 
-.directions li a{
+#navigation li a{
     display: block;
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
 }
 
-.directions li a:hover{
-    background-color: #555;
+#navigation li a:hover{
+    background-color: rgb(96, 96, 235);
     color: white;
+}
+
+.gallery{
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+.gallery:hover{
+    border: 1px solid rgb(32, 186, 203);
+}
+
+.gallery image{
+    width: 100%;
+    height: 20%;
+}
+
+.desc{
+    padding: 15px;
+    text-align: center;
 }
